--- a/styles/home.css
+++ b/styles/home.css
@@ -41,11 +41,23 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    /* background: black; */
+    z-index:1;
 }
 .header canvas {
     position: absolute;
     z-index: -1;
+    filter: blur(4px);
+}
+.header .canvas-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 0;
 }
 .header .text-container {
     overflow: hidden;
