Temporarily removed name from header, can now nudge the 3d model around with mouse movement.

--- a/styles/home.css
+++ b/styles/home.css
@@ -11,14 +11,8 @@
     z-index:1;
     background: black;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-}
-.header .name-section {
-    font-family: "Eurostile 2", sans-serif;
-    font-size: 4rem;
-    font-weight: bold;
-    margin-right: 200px;
 }
 .header canvas {
     position: absolute;
